--- a/index.html
+++ b/index.html
@@ -1,122 +1,83 @@
- <!DOCTYPE html> 
- <html lang="en"> 
- <head> 
- <meta charset="UTF-8"> 
- <title>Document</title> 
- <style> 
- *{ 
- margin: 0; 
- padding: 0; 
- } 
- #nav{ 
- background: #eee; 
- width: 600px; 
- height: 40px; 
- margin: 0 auto; 
- } 
- ul{ 
- list-style:none; 
- } 
- ul li{ 
- float: left; 
- line-height: 40px; 
- text-align: center; 
- position: relative; 
- } 
- a{ 
- text-decoration: none; 
- color: #000; 
- display: block; 
- padding: 0 10px; 
- height: 40px; 
- } 
- a:hover{ 
- color: #fff; 
- background: #666; 
- } 
- ul li ul li{ 
- float: none; 
- background: #eee; 
- margin-top: 2px; 
- } 
- ul li ul{ 
- position: absolute; 
- left: 0; 
- top: 40px; 
- } 
- ul li ul li a{ 
- width: 80px; 
- } 
- ul li ul li a:hover{ 
- background: #06f; 
- } 
- ul li ul{ 
- display: none; 
- } 
- ul li:hover ul{ 
- display: block; 
- } 
- </style> 
- </head> 
- <body> 
- <div id="nav"> 
- <ul> 
- <li> 
- 实验一 
- <ul> 
- <li>1</li> 
- <li>2</li> 
- <li>3</li> 
- <li>4</li> 
- <li>5</li> 
- <li>6</li> 
- </ul> 
- </li> 
- <li>实验二 
- <ul> 
- <li>1</li> 
- <li>2</li> 
- <li>3</li> 
- <li>4</li> 
- </ul> 
- </li> 
- <li> 
- 实验三 
- <ul> 
- <li>1</li> 
- <li>2</li> 
- <li>3</li> 
- <li>4</li> 
- <li>5</li> 
- <li>6</li> 
- </ul> 
- </li> 
- <li> 
- 实验四 
- <ul> 
- <li>1</li> 
- <li>2</li> 
- </ul> 
- </li> 
- <li> 
- 实验五 
- <ul> 
- <li>1</li> 
-   </ul> 
- </li> 
- <li>实验六 
- <ul> 
- <li>1</li> 
-   </ul> 
- </li> 
- <li>实验七 
- <ul> 
- <li>1</li> 
- <li>2</li> 
- <li>3</li> 
- </ul> 
- </li> 
- </ul> 
- </div> 
- </body> 
+
+<html>
+<head>
+<meta charset="utf-8">
+<title>罗仪发</title>
+</head>
+<link rel="stylesheet" type="text/css" href="css/导航页1.css">
+</head>
+<body>
+<p class="p">实验内容</p>
+	<div class="nav">
+	<div class="menu">
+		<ul>
+			<li><a href="#" >实验一</a>
+				<ul class="sub">
+				<li><a href="sy1-1.html">sy1-1</a></li>	
+				<li><a href="sy1-2.html">sy1-2</a></li>
+				<li><a href="sy1-3.html">sy1-3</a></li>
+				<li><a href="sy1-4.html">sy1-4</a></li>
+				<li><a href="sy1-5.html">sy1-5</a></li>
+				<li><a href="sy1-6.html">sy1-6</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">实验二</a>
+				<ul class="sub">
+				<li><a href="sy2-1.html">sy2-1</a></li>
+				<li><a href="sy2-2.html">sy2-2</a></li>
+				<li><a href="sy2-3.html">sy2-3</a></li>
+				<li><a href="sy2-4.html">sy2-4</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">实验三</a>
+				<ul class="sub">
+				<li><a href="sy3-1.html">sy3-1</a></li>
+				<li><a href="sy3-2.html">sy3-2</a></li>
+				<li><a href="sy3-3.html">sy3-3</a></li>
+				<li><a href="sy3-4.html">sy3-4</a></li>
+				<li><a href="sy3-5.html">sy3-5</a></li>	
+				<li><a href="sy3-6.html">sy3-6</a></li>
+				</ul>
+			</li>
+			<li>
+			<a href="#">实验四</a>
+					<ul class="sub">
+					<li><a href="sy4-1.html">sy4-1</a></li>
+					<li><a href="sy4-2.html">sy4-2</a></li>
+					</ul>
+			</li>
+			<li>
+			<a href="#">实验五</a>
+					<ul class="sub">
+					<li><a href="sy5.html">sy5</a></li>
+					</ul>
+			
+			</li>
+			<li>
+			<a href="#">实验六</a>
+					<ul class="sub">
+					<li><a href="sy6.html">sy6</a></li>
+					</ul>
+			
+			</li>
+			<li>
+			<a href="#">实验七</a>
+					<ul class="sub">
+					<li><a href="sy7-1.html">sy7-1</a></li>
+					<li><a href="sy7-2.html">sy7-2</a></li>
+					</ul>
+			</li>
+			<li>
+			<a href="#">实验八</a>
+					<ul class="sub">
+					<li><a href="sy8.html">个人主页</a></li>
+					</ul>
+			</li>
+			</ul>
+		</div>		
+</div>
+<canvas id="canvas"></canvas>
+<script>
  
