--- a/sy1-2.html
+++ b/sy1-2.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 	<h1 align="center">音乐欣赏&nbsp;</h1>
-		<p align="center"><img src="E:\DDD盘\壁纸\v2-5c26b3495268041643d2f551ff4e6602_r.jpg"
+		<p align="center"><img src="v2-5c26b3495268041643d2f551ff4e6602_r.jpg"
 							   width=“400” height="400" </p>
 
 <h2>我的音乐播放器</h2>
 
 <audio controls>
     <source align="center"
-			src="E:\DDD盘\系统默认\桌面\Study\Web Design\奇迹再现 - 毛华锋.mp3" type="audio/mp3">
+			src="奇迹再现 - 毛华锋.mp3" type="audio/mp3">
     Your browser does not support the audio tag.
 </audio>
 
