--- a/sy1-2.html
+++ b/sy1-2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1 align="center">音乐欣赏&nbsp;</h1>
-		<p align="center"><img src="v2-5c26b3495268041643d2f551ff4e6602_r.jpg"
+		<p align="center"><img src="sy1-2.jpg"
 							   width=“400” height="400" </p>
 
 <h2>我的音乐播放器</h2>
